@@ -9,12 +9,14 @@ is an example of the definition of a directive:
     %class-name = "MyScanner"
         )
 
-    The following directives are available:
-
+    Directives accepting a `filename' do not accept path names, i.e., they
+cannot contain directory separators (tt(/)); options accepting a 'pathname'
+may contain directory separators. A 'pathname' using blank characters should
+be surrounded by double quotes.
     itemization(
-    it() bf(%baseclass-header) tt(= "header") nl()
-           Defines the pathname of the file containing the scanner class's
-            base class interface. Corresponding command-line option:
+    it() bf(%baseclass-header) tt(= "filename") nl()
+           Defines the name of the file to contain the scanner class's base
+            class interface. Corresponding command-line option:
             tt(--baseclass-header).
     it() bf(%case-insensitive)nl()
            Generates a scanner em(case insensitively) matching regular
@@ -45,10 +47,9 @@ is an example of the definition of a directive:
             input tt(matched()) returns, respectively tt(first, First, FIRST)
             and tt(firST), while matching the rule tt(First).
 
-    it() bf(%class-header) tt(= "header") nl()
-           Defines the pathname of the file containing the scanner class's
-            interface. Corresponding command-line option:
-            tt(--class-header).
+    it() bf(%class-header) tt(= "filename") nl()
+           Defines the name of the file to contain the scanner class's
+            interface. Corresponding command-line option: tt(--class-header).
     it() bf(%class-name) tt( = "class-name") nl()
            Declares the name of the scanner class generated by flc(). This
             directive corresponds to the tt(%name) directive used by
@@ -87,10 +88,9 @@ END)
             scanner.ih,) and tt(scannerbase.h).  Corresponding command-line
             option: tt(--filenames). The name of the source file (by default
             tt(lex.cc)) is controlled by the tt(%lex-source) directive.
-    it() bf(%implementation-header) tt(= "header") nl()
-           Defines the pathname of the file to contain the implementation
-            header.  Corresponding command-line option:
-            tt(--implementation-header).
+    it() bf(%implementation-header) tt(= "filename") nl()
+           Defines the name of the file to contain the implementation header.
+            Corresponding command-line option: tt(--implementation-header).
     it() bf(%input-implementation) tt(= "sourcefile") nl()
            Defines the pathname of the file containing the implementation of a
             user-defined tt(Input) class. 
@@ -112,8 +112,8 @@ END)
             lexical scanning. If this directive is omitted the default name
             (tt(lex)) is used. Corresponding command-line option:
             tt(--lex-function-name).
-    it() bf(%lex-source) tt(= "source") nl()
-           Defines the pathname of the file to contain the scanner member
+    it() bf(%lex-source) tt(= "filename") nl()
+           Defines the name of the file to contain the scanner member
             tt(lex). Corresponding command-line option: tt(--lex-source).
     it() bf(%no-lines) nl() 
            Do not put tt(#line) preprocessor directives in the file containing
@@ -144,15 +144,16 @@ END)
            The tt(%s) directive is followed by a list of one or more
             identifiers, separated by blanks. Each identifier is the name of
             an em(inclusive mini scanner).
-    it() bf(%skeleton-directory) tt(= "path") nl()
-           Use tt(path) rather than the default (e.g., tt(/usr/share/flexc++))
-            path when looking for flc()'s skeleton files. Corresponding
-            command-line option: tt(--skeleton-directory).
-    it() bf(%target-directory) tt(= "path") nl()
-           Generate files in tt(path) rather than in flc()'s input file's
-            directory.
-            The tt(%target-directory) option does not affect files that were 
-            explicitly named (either as option or as directive).
+    it() bf(%skeleton-directory) tt(= "pathname") nl()
+           Use tt(pathname) rather than the default (e.g.,
+            tt(/usr/share/flexc++)) path when looking for flc()'s skeleton
+            files. Corresponding command-line option:
+            tt(--skeleton-directory).
+    it() bf(%target-directory) tt(= "pathname") nl()
+           tt(Pathname) defines the directory where generated files should be
+            written.  By default this is the directory where flc() is
+            called. This directive is overruled by the tt(--target-directory)
+            command-line option.
     it() bf(%x) tt(namelist) nl()
            The tt(%x) directive is followed by a list of one or more
             identifiers, separated by blanks. Each identifier is the name of
