@@ -5,7 +5,6 @@
 
 char Options::s_defaultSkeletonDirectory[]       = _Skel_;
 char Options::s_defaultLexFunctionName[]        = "lex";
-char Options::s_defaultTargetDirectory[]        = "";
 char Options::s_defaultClassName[]              = "Scanner";
 
 void (*Options::s_regexCall)(char const *funName) = Options::nop;
