@@ -1,64 +1,43 @@
 #include "options.ih"
 
 //     1           2           3       4
-// --target     %target     --dest   %dest       action: (D: default, W: warn
+// --target     %target     --dest   %dest       action:
 // ------------------------------------------------------
-//     0           0           0       0           D
-//     0           0           0       1           4
-//     0           0           1       0           3       3 overrules 4
-//     0           0           1       1           3
-//     0           1           0       0           2 D     
-//     0           1           0       1           4       specific overrules
-//     0           1           1       0           3
-//     0           1           1       1           3
-//     1           0           0       0           1 D
-//     1           0           0       1           4 W     W: --target ignored
-//     1           0           1       0           3
-//     1           0           1       1           3
-//     1           1           0       0           1 D
-//     1           1           0       1           4 W
-//     1           1           1       0           3
-//     1           1           1       1           3
-// -------------------------------------------------------
-// 
-//     1           2           3       4
-// --target     %target     --dest   %dest       action: (D: default, W: warn
-// ------------------------------------------------------
-//     0           0           1       0           3       3 overrules 4
-//     0           0           1       1           3
-//     0           1           1       0           3
-//     0           1           1       1           3
-//     1           0           1       0           3
-//     1           0           1       1           3
-//     1           1           1       0           3
-//     1           1           1       1           3
-// 
-//     0           0           0       1           4      specific overrules
-//     0           1           0       1           4                   target
-//     1           0           0       1           4 W     W: --target ignored
-//     1           1           0       1           4 W
-// 
-//     1           0           0       0           1 D    option overrules dir
-//     1           1           0       0           1 D
-//     0           1           0       0           2 D     
-//     0           0           0       0           D
+//     0           0           1       0           2
+//     0           0           1       1           2
+//     0           1           1       0           2
+//     0           1           1       1           2
+//     1           0           1       0           2
+//     1           0           1       1           2
+//     1           1           1       0           2
+//     1           1           1       1           2
+//     0           0           0       1           2
+//     0           1           0       1           2
+//     1           0           0       1           2
+//     1           1           0       1           2
+//     1           0           0       0           1
+//     1           1           0       0           1
+//     0           1           0       0           1
+//     0           0           0       0           1
 // -------------------------------------------------------
 
 
-void Options::setPath(string *dest, int optChar, bool targetDirOption, 
-                      char const *optionName, string const &className, 
-                      char const *suffix)
+void Options::setPath(string *dest, int optChar, 
+                      string const &defaultFilename,
+                      char const *defaultSuffix, 
+                      char const *optionName)
 {
-    if (not Arg::instance().option(dest, optChar))  // catches '3'
+    Arg::instance().option(dest, optChar);  // try to get the option
+
+    if (dest->find('/') != string::npos)
+        emsg << '`' << optionName << "' option/directive: no path names" << 
+                                                                        endl;
+    else 
     {
-        if (not dest->empty())                      // catches '4'
-        {
-            if (targetDirOption)                    // '4 W' actions
-                wmsg << "--target-directory ignored for %" << optionName << 
-                        endl;
-        }
-        else                                        // Defaults:
-            *dest = d_targetDirectory + className + suffix;
+        if (dest->empty())                  // no value in dest: use a default
+            *dest = defaultFilename + defaultSuffix;  // filename and suffix
+
+        *dest = d_targetDirectory + *dest; // prefix the target (may be empty)
     }
 }
         
