@@ -1,4 +1,4 @@
-// Generated by Flexc++ V1.03.02 on Thu, 14 Mar 2013 12:38:54 +0100
+// Generated by Flexc++ V1.04.00 on Tue, 28 May 2013 16:37:35 +0200
 
 #ifndef ScannerBASE_H_INCLUDED
 #define ScannerBASE_H_INCLUDED
@@ -139,7 +139,7 @@ private:
     Input           d_input;
     std::string     d_matched;              // matched characters
     bool            d_return;               // return after a rule's action 
-    bool            d_more;                 // set to true by more()
+    bool            d_more = false;         // set to true by more()
 
 protected:
     std::istream   *d_in__;
